--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,54 +1,54 @@
 <header>
-  <ul class='header'>
+  <ul class="header">
     <!--end_userログイン後-->
     <% if end_user_signed_in? %>
-      <li class='header__link--logo'>
+      <li class="header__link--logo">
         <!--ヘッダーロゴつける-->
         <%= link_to spots_path do %>
           <img src="" alt="headerlogo" >
         <% end %>
       </li>
-      <li class='header__link'>
+      <li class="header__link">
         <!--マイページのリンクつける-->
         <i class="fa-solid fa-house-chimney"></i>
       </li>
-      <li class='header__link'>
+      <li class="header__link">
         <!--新規投稿のリンクつける-->
         <i class="fa-solid fa-circle-plus"></i>
       </li>
-      <li class='header__link'>
+      <li class="header__link">
         <!--通知のリンクつける-->
         <i class="fa-solid fa-bell"></i>
       </li>
-      <li class='header__link'>
+      <li class="header__link">
         <%= link_to destroy_end_user_session_path, method: :delete do %>
           <i class="fa-solid fa-right-from-bracket"></i>
         <% end %>
       </li>
     <!--管理者ログイン後-->
     <% elsif admin_signed_in? %>
-      <li class='header__link--logo'>
+      <li class="header__link--logo">
         <!--ヘッダーロゴつける-->
         <%= link_to spots_path do %>
           <img src="" alt="headerlogo" >
         <% end %>
       </li>
-      <li class='header__link'>
+      <li class="header__link">
         <%= link_to destroy_admin_session_path, method: :delete do %>
           <i class="fa-solid fa-right-from-bracket"></i>
         <% end %>
       </li>
     <!--ログイン前（共通）-->
     <% else %>
-      <li class='header__link--logo'>
+      <li class="header__link--logo">
         <!--ヘッダーロゴつける-->
         <img src="" alt="headerlogo" >
       </li>
-      <li class='header__link'>
-        <%= link_to '新規登録', new_end_user_registration_path, class: 'header__link--text' %>
+      <li class="header__link">
+        <%= link_to "新規登録", new_end_user_registration_path, class: "header__link--text" %>
       </li>
-      <li class='header__link'>
-        <%= link_to 'ログイン', new_end_user_session_path, class: 'header__link--text' %>
+      <li class="header__link">
+        <%= link_to "ログイン", new_end_user_session_path, class: "header__link--text" %>
       </li>
     <% end %>
   </ul>
