--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= render 'layouts/header' %>
+<%= render "layouts/header" %>
 <h2>新規登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -33,3 +33,4 @@
 <% end %>
 
 <%= render "public/shared/links" %>
+<%= render "layouts/footer" %>
