--- a/app/views/admin/end_users/index.html.erb
+++ b/app/views/admin/end_users/index.html.erb
@@ -1,3 +1,34 @@
-<%= render "layouts/header" %>
+<h2 class="heading">ユーザー</h2>
 
-<%= render "layouts/footer" %>
+<table class="table">
+  <thead>
+     <tr class="table__row">
+      <th class="table__heading">ユーザー名</th>
+      <th class="table__heading">メールアドレス</th>
+      <th class="table__heading">ステータス</th>
+      <th class="table__heading"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @end_users.each do |end_user| %>
+    <tr class="table__row">
+      <td class="table__item">
+        <%= end_user.name %>
+      </td>
+      <td class="table__item">
+        <%= end_user.email %>
+      </td>
+      <td class="table__item">
+        <% if end_user.is_deleted == false %>
+          <span class="table__item--status">有効</span>
+        <% else %>
+          <span class="table__item--status">退会</span>
+        <% end %>
+      </td>
+      <td class="table__item">
+        <%= link_to "編集", edit_admin_end_user_path(end_user) %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
