--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,5 +1,4 @@
-<%= render "layouts/header" %>
-<h2>新規登録</h2>
+<h2 class="heading">新規登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
@@ -33,4 +32,3 @@
 <% end %>
 
 <%= render "public/shared/links" %>
-<%= render "layouts/footer" %>
