--- a/app/views/public/spots/_form.html.erb
+++ b/app/views/public/spots/_form.html.erb
@@ -1,21 +1,34 @@
-<%= form_with model: spot, url: spots_path, local: true do |f| %>
+<div class="form">
+  <%= f.label :画像, class: "form__label" %>
+  <%= f.file_field :spot_images, multiple: true %>
+  <p>※最大アップロード枚数5枚</p>
+</div>
+<div class="form">
+  <%= f.label :紹介, class: "form__label" %>
+  <%= f.text_area :introduction %>
+</div>
+<div class="form">
+  <%= f.label :住所, class: "form__label" %>
+  <%= f.text_field :address, :placeholder => "都道府県から記入をお願いします" %>
+</div>
+<% if local_assigns[:edit_flag].present? %>
+  <!--編集画面の場合-->
   <div class="form">
-    <%= f.label :画像, class: "form__label" %>
-    <%= f.file_field :spot_images, multiple: true %>
+    <%= f.label :タグ, class: "form__label" %>
+    <%= f.text_field :tag_ids, value: tag_list, :placeholder => "（例）店名　ペット可　駐車場あり" %>
   </div>
   <div class="form">
-    <%= f.label :紹介, class: "form__label" %>
-    <%= f.text_area :introduction %>
+    <%= link_to "削除", spot_path, method: :delete %>
+    <%= f.submit "変更", class: "form__btn" %>
   </div>
-  <div class="form">
-    <%= f.label :住所, class: "form__label" %>
-    <%= f.text_field :address, :placeholder => "都道府県から記入をお願いします" %>
-  </div>
+<% else %>
+  <!--新規投稿画面の場合-->
   <div class="form">
     <%= f.label :タグ, class: "form__label" %>
     <%= f.text_field :tag_ids, :placeholder => "（例）店名　ペット可　駐車場あり" %>
   </div>
   <div class="form">
-    <%= f.submit "保存", class: "form__btn" %>
+    <%= f.submit "投稿", class: "form__btn" %>
   </div>
 <% end %>
+
