--- a/app/views/public/spots/index.html.erb
+++ b/app/views/public/spots/index.html.erb
@@ -1,17 +1,2 @@
-<% @spots.each do |spot| %>
-
-  <% if spot.favorited_by?(current_end_user) %>
-    <%= link_to spot_favorites_path(spot), method: :delete do %>
-   <!--style修正する-->
-      <i class="fa-solid fa-heart" aria-hidden="true" style="color: red;"></i>
-      <%= spot.favorites.count %>
-    <% end %>
-  <% else %>
-    <%= link_to spot_favorites_path(spot), method: :post do %>
-      <i class="fa-solid fa-heart" aria-hidden="true"></i>
-      <%= spot.favorites.count %>
-    <% end %>
-  <% end %>
-  
-<% end %>
-
+<%= render "index", spots: @spots %>
+<%= paginate @spots %>
