[Add]タグ検索機能

--- a/app/views/public/spots/index.html.erb
+++ b/app/views/public/spots/index.html.erb
@@ -1,2 +1,6 @@
-<%= render "index", spots: @spots %>
+<div class="index">
+  <% @spots.each do |spot| %>
+    <%= render "index", spot: spot %>
+  <% end %>
+</div>
 <%= paginate @spots %>
