--- a/app/assets/stylesheets/image.scss
+++ b/app/assets/stylesheets/image.scss
@@ -1,6 +1,15 @@
 .image {
   width: 90%;
   margin: 0 auto;
+  
+  &__wrap {
+    display: flex;
+    flex-wrap: wrap;
+    
+    &--box {
+      width: 25%;
+    }
+  }
 
   &__box {
     display: flex;
