--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
         <% end %>
       </li>
       <li class="header__link">
-        <%= link_to mypage_end_users_path do %>
+        <%= link_to end_user_path(current_end_user) do %>
           <i class="fa-solid fa-house-chimney"></i>
         <% end %>
       </li>
