--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -6,7 +6,7 @@
     height: 100px;
     margin-top: 30px;
 
-    &--comment {
+    &--small {
       border-radius: 50%;
       width: 50px;
       height: 50px;
