[Add]favorites一覧画面作成

--- a/app/views/public/end_users/show.html.erb
+++ b/app/views/public/end_users/show.html.erb
@@ -34,25 +34,5 @@
   </div>
 </div>
   
-<div class="image__wrap">
-  <% @spots.each do |spot| %>
-    <div class="image__wrap--box">
-      <ul class="image__box">
-        <% spot.spot_images.each do |image| %>
-          <li class="image__item">
-            <%=link_to spot_path(spot) do %>
-              <%= image_tag image, size: "340x340" %>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-</div>
-
+<%= render "spot", spots: @spots %>
 <%= paginate @spots %>
- 
-
-
-
-
