--- a/app/views/public/tags/show.html.erb
+++ b/app/views/public/tags/show.html.erb
@@ -1,8 +1,3 @@
 <h2 class="heading">Serch for"<%= @tag.name %>"</h2>
-<div class="index">
-  <% @spots.each do |spot| %>
-    <%= render "public/spots/index", spot: spot %>
-  <% end %>
-</div>
-
+<%= render "public/spots/index", spots: @spots %>
 <%= paginate @spots %>
