--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -26,8 +26,8 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "新規登録" %>
+  <div class="btn">
+    <%= f.submit "新規登録", class: "btn__simple--blue" %>
   </div>
 <% end %>
 
