--- a/app/views/public/spots/show.html.erb
+++ b/app/views/public/spots/show.html.erb
@@ -21,19 +21,19 @@
         <% end %>
       </span>
     </div>
-    
+
     <div class="profile__item">
       <%= @spot.introduction %>
     </div>
-    
+
     <div class="profile__item">
      住所：<%= @spot.address %>
     </div>
-    
+
     <div class="profile__item">
       投稿日時：<%= l @spot.created_at %>
     </div>
-    
+
     <div class="profile__item">
       <% @spot.tags.each do |tag| %>
         <%= link_to tag_path(tag) do %>
@@ -41,49 +41,21 @@
         <% end %>
       <% end %>
     </div>
-    
+
   </div>
 </div>
 
-<div class="show__favorite">
-  <% if @spot.favorited_by?(current_end_user) %>
-    <%= link_to spot_favorites_path(@spot), method: :delete do %>
-      <i class="fa-solid fa-heart index__favorited" aria-hidden="true"></i>
-      <%= @spot.favorites.count %>
-    <% end %>
-  <% else %>
-    <%= link_to spot_favorites_path(@spot), method: :post do %>
-      <i class="fa-solid fa-heart" aria-hidden="true"></i>
-      <%= @spot.favorites.count %>
-    <% end %>
-  <% end %>
+<div class="show__favorite" id="favorite-btn-<%= @spot.id %>">
+  <%= render "public/favorites/favorite", spot: @spot %>
 </div>
 
 <div class="show__comment">
-  <%= form_with(model:[@spot, @comment], url: spot_comments_path(@spot), local: true) do |f| %>
-    <%= f.text_area :comment, placeholder: "コメント", class: "show__comment--form" %>
-    <%= f.submit "送信" %>
-  <% end %>
+  <%= render "public/comments/form", spot: @spot, comment: @comment %>
 
   <table>
-    <tbody>
-      <% @spot.comments.each do |comment| %>
-      <tr>
-        <td>
-          <%= link_to end_user_path(comment.end_user), class: "profile__name" do %>
-            <%= image_tag comment.end_user.get_profile_image, class: "profile__image--small", size: "50x50" %><br>
-            <span class="profile__name"><%= comment.end_user.name %></span>
-          <% end %>
-        </td>
-        <td><%= comment.comment %></td>
-        <td>
-          <% if comment.end_user == current_end_user %>
-            <%= link_to "削除", spot_comment_path(@spot, comment), method: :delete %>
-          <% end %>
-        </td>
-      </tr>
-      <% end %>
+    <tbody id="comment-index-<%= @spot.id %>">
+      <%= render "public/comments/index", spot: @spot %>
     </tbody>
   </table>
-  
+
 </div>
