--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,7 +1,10 @@
+ 
+ <%= render "layouts/error", resource: resource %>
+
 <h2 class="heading">新規登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
+ 
   
   <div class="field">
     <%= f.label :ユーザー名 %>
