--- a/app/views/admin/end_users/edit.html.erb
+++ b/app/views/admin/end_users/edit.html.erb
@@ -1,3 +1,6 @@
+<!--エラー表示-->
+<%= render "layouts/error", resource: @end_user %>
+
 <h2 class="heading">ユーザー編集</h2>
 
 <%= form_with model: @end_user, url: admin_end_user_path, local: true do |f| %>
