[Add]お問い合わせ機能作成

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,6 @@
 <footer class="footer">
   <p class="footer__text">Copyright © 2022 spot-label All Rights Reserved.</p>
+  <%= link_to new_contact_path do %>
+    <i class="fa-solid fa-envelope"></i>お問い合わせ
+  <% end %>
 </footer>
