--- a/app/views/public/favorites/_favorite.html.erb
+++ b/app/views/public/favorites/_favorite.html.erb
@@ -1,11 +1,11 @@
- <% if spot.favorited_by?(current_end_user) %>
+ <% if spot.favorited_by?(spot.favorites, current_end_user.id) %>
   <%= link_to spot_favorites_path(spot), method: :delete, remote: true do %>
     <i class="fa-solid fa-heart index__favorited" aria-hidden="true"></i>
-    <%= spot.favorites.count %>
+    <%= spot.favorites.size %>
   <% end %>
 <% else %>
   <%= link_to spot_favorites_path(spot), method: :post, remote: true do %>
     <i class="fa-solid fa-heart" aria-hidden="true"></i>
-    <%= spot.favorites.count %>
+    <%= spot.favorites.size %>
   <% end %>
 <% end %>
