--- a/app/views/public/comments/create.js.erb
+++ b/app/views/public/comments/create.js.erb
@@ -1,2 +1,3 @@
 $("#comment-index-<%= @spot.id %>").html("<%= j(render 'index', spot: @spot) %>");
 $("#comment-form").val("")
+$("#error").html("")
