--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,8 @@
 <footer class="footer">
   <p class="footer__text">Copyright © 2022 spot-label All Rights Reserved.</p>
-  <%= link_to new_contact_path do %>
-    <i class="fa-solid fa-envelope"></i>お問い合わせ
-  <% end %>
+  <div class="footer__link">
+    <%= link_to new_contact_path do %>
+      <i class="fa-solid fa-envelope"></i>お問い合わせ
+    <% end %>
+  </div>
 </footer>
