--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -3,7 +3,7 @@
   <h5 class="main__logo--text">Why don't we share your favorite spots?</h5>
 </div>
 
-<div class="main__text">
+<div class="text">
   <h3 class="text__heading">What about Spot Label?</h3>
   <p class="text__content">
     Spot Labelは地元や旅先で見つけた素敵な場所を共有するSNSサイトです。<br>
