--- a/app/assets/stylesheets/table.scss
+++ b/app/assets/stylesheets/table.scss
@@ -2,13 +2,60 @@
   border-collapse: collapse;
   margin-left: 10%;
   margin-top: 10px;
+  width: 70%;
   
   &__row {
     border-bottom: solid 1px #777777;
+    text-align: center;
   }
   &__item {
     width: 10%;
-    text-align: center;
     padding: 15px 0;
+  }
+  &__heading {
+    text-align: left;
+    width: 10%;
+    padding: 5px;
+  }
+  &__text {
+    color: red;
+    font-size: small;
+  }
+  &__center {
+    width: 65%;
+    text-align: center;
+  }
+  &__form {
+    width: 60%;
+    padding: 5px;
+   
+    
+    &--field {
+      width: 100%;
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid #EEEEEE;
+    }
+    &--area {
+      width: 100%;
+      padding: 10px;
+      height: 100px;
+      border-radius: 5px;
+      border: 1px solid #EEEEEE;
+    }
+  }
+}
+
+//タブレット縦置きサイズ(768px)以下の際に適用される設定 
+@media screen and (max-width: 768px){
+  .table {
+    width: 85%;
+  }
+}
+
+// スマートフォンサイズ（425px）以下の際に適用される設定
+@media screen and (max-width: 425px){
+  .table {
+    width: 50%;
   }
 }
