--- a/app/views/admin/end_users/edit.html.erb
+++ b/app/views/admin/end_users/edit.html.erb
@@ -4,18 +4,25 @@
 <h2 class="heading">ユーザー編集</h2>
 
 <%= form_with model: @end_user, url: admin_end_user_path, local: true do |f| %>
-  <div class="form">
-    <%= f.label :ユーザー名, class: "form__label" %>
-    <%= f.text_field :name %>
-  </div>
-  <div class="form">
-    <%= f.label :ステータス, class: "form__label" %>
-    <%= f.radio_button :is_deleted, false %>
-    <%= f.label :ステータス, "有効", value: false %>
-    <%= f.radio_button :is_deleted, true %>
-    <%= f.label :ステータス, "退会", value: true %>
-  </div>
-  <div class="form">
-    <%= f.submit "変更を保存", class: "form__btn" %>
+  <table class="table">
+    <tr>
+      <th class="table__heading"><%= f.label :ユーザー名 %></th>
+      <td class="table__form"><%= f.text_field :name, class: "table__form--field" %></td>
+    </tr>
+    <tr>
+      <th class="table__heading"><%= f.label :ステータス %></th>
+      <td class="table__form">
+        <label>
+          <%= f.radio_button :is_deleted, false %>
+          <%= f.label :ステータス, "有効", value: false %>
+          <%= f.radio_button :is_deleted, true %>
+          <%= f.label :ステータス, "退会", value: true %>
+        </label>
+      </td>
+    </tr>
+  </table>
+    
+  <div class="btn post">
+    <%= f.submit "変更を保存", class: "btn__big--blue" %>
   </div>
 <% end %>
