--- a/app/views/public/end_users/edit.html.erb
+++ b/app/views/public/end_users/edit.html.erb
@@ -3,24 +3,27 @@
 
 <h2 class="heading">プロフィール編集</h2>
 <%= form_with model: @end_user, url: end_user_path(@end_user), local: true do |f| %>
-  <div class="form">
-    <%= f.label :画像, class: "form__label" %>
-    <%= f.file_field :profile_image %>
-  </div>
-  <div class="form">
-    <%= f.label :ユーザー名, class: "form__label" %>
-    <%= f.text_field :name %>
-  </div>
-  <div class="form">
-    <%= f.label :メールアドレス, class: "form__label" %>
-    <%= f.text_field :email %>
-  </div>
-  <div class="form">
-    <%= f.label :紹介, class: "form__label" %>
-    <%= f.text_area :introduction %>
-  </div>
-  <div class="form">
-    <%= link_to "退会", unsubscribe_end_users_path %>
-    <%= f.submit "変更" %>
+  <table class="table">
+    <tr>
+      <th class="table__heading"><%= f.label :画像 %></th>
+      <td class="table__form"><%= f.file_field :profile_image %></td>
+    </tr>
+    <tr>
+      <th class="table__heading"><%= f.label :ユーザー名 %></th>
+      <td class="table__form"><%= f.text_field :name, class: "table__form--field" %></td>
+    </tr>
+    <tr>
+      <th class="table__heading"><%= f.label :メールアドレス %></th>
+      <td class="table__form"><%= f.text_field :email, class: "table__form--field" %></td>
+    </tr>
+    <tr>
+      <th class="table__heading"><%= f.label :紹介 %></th>
+      <td class="table__form"><%= f.text_area :introduction, class: "table__form--area" %></td>
+    </tr>
+  </table>
+
+  <div class="btn post">
+    <%= link_to "退会", unsubscribe_end_users_path, class: "btn__simple--red-small post__btween" %>
+    <%= f.submit "変更", class: "btn__simple--blue post__btween" %>
   </div>
 <% end %>
