--- a/app/views/public/spots/_form.html.erb
+++ b/app/views/public/spots/_form.html.erb
@@ -1,34 +1,41 @@
-<div class="form">
-  <%= f.label :画像, class: "form__label" %>
-  <%= f.file_field :spot_images, multiple: true %>
-  <p>※最大アップロード枚数5枚</p>
-</div>
-<div class="form">
-  <%= f.label :紹介, class: "form__label" %>
-  <%= f.text_area :introduction %>
-</div>
-<div class="form">
-  <%= f.label :住所, class: "form__label" %>
-  <%= f.text_field :address, :placeholder => "都道府県から記入" %>
-</div>
-<% if local_assigns[:edit_flag].present? %>
+<table class="table">
+  <tr>
+    <th class="table__heading"><%= f.label :画像 %></th>
+    <td class="table__form">
+      <%= f.file_field :spot_images, multiple: true %>
+      <p class="table__text">最大5枚</p>
+    </td>
+  </tr>
+  <tr>
+    <th class="table__heading"><%= f.label :紹介 %></td>
+    <td class="table__form"><%= f.text_area :introduction, class: "table__form--area" %></td>
+  </tr>
+  <tr>
+    <th class="table__heading"><%= f.label :住所 %></td>
+    <td class="table__form"><%= f.text_field :address, :placeholder => "都道府県から記入", class: "table__form--field" %></td>
+  </tr>
   <!--編集画面の場合-->
-  <div class="form">
-    <%= f.label :タグ, class: "form__label" %>
-    <%= f.text_field :tag_ids, value: tag_list %>
+  <% if local_assigns[:edit_flag].present? %>
+    <tr>
+      <th class="table__heading"><%= f.label :タグ %></td>
+      <td class="table__form"><%= f.text_field :tag_ids, value: tag_list, class: "table__form--field" %></td>
+    </tr>
+  </table>
+  <div class="btn post">
+    <%= link_to "削除", spot_path, method: :delete, class: "btn__simple--red-small post__btween" %>
+    <%= f.submit "変更", class: "btn__simple--blue post__btween" %>
   </div>
-  <div class="form">
-    <%= link_to "削除", spot_path, method: :delete %>
-    <%= f.submit "変更", class: "form__btn" %>
-  </div>
-<% else %>
   <!--新規投稿画面の場合-->
-  <div class="form">
-    <%= f.label :タグ, class: "form__label" %>
-    <%= f.text_field :tag_ids, :placeholder => "#店名　#ペット可　#駐車場" %>
+  <% else %>
+    <tr>
+      <th class="table__heading"><%= f.label :タグ %></td>
+      <td class="table__form">
+        <%= f.text_field :tag_ids, :placeholder => "#店名　#ペット可　#駐車場", class: "table__form--field" %>
+        <p class="table__text">半角#をお付けください、複数の場合は空白で区切ってください</p>
+      </td>
+    </tr>
+  </table>
+  <div class="btn post">
+    <%= f.submit "投稿", class: "btn__big--blue" %>
   </div>
-  <div class="form">
-    <%= f.submit "投稿", class: "form__btn" %>
-  </div>
-<% end %>
-
+  <% end %>
