--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -15,8 +15,9 @@
   <div>
     <h3 class="text__heading">Spot Labelをはじめよう</h3>
     <div class="btn">
-       <%= link_to "新規登録", new_end_user_registration_path, class: "btn__simple--blue post__btween" %>
-       <%= link_to "ログイン", new_end_user_session_path, class: "btn__simple--green post__btween" %>
+       <%= link_to "新規登録", new_end_user_registration_path, class: "btn__simple--blue" %>
+       <%= link_to "ログイン", new_end_user_session_path, class: "btn__simple--green" %>
+       <%= link_to "ゲスト", end_users_guest_sign_in_path, method: :post, class: "btn__simple--gray" %>
     </div>
   </div>
 
