--- a/app/views/public/contacts/new.html.erb
+++ b/app/views/public/contacts/new.html.erb
@@ -3,16 +3,18 @@
 
 <h3 class="heading">お問い合わせフォーム</h3> 
 <%= form_with model: @contact, url: contacts_path, local: true do |f| %>
-  <div class="form__label">
-    <%= f.label :お名前 %>
-    <%= f.text_field :name, placeholder: "ユーザー名" %>
-  </div>
-  <div class="form__label">
-    <%= f.label :お問い合わせ内容 %>
-    <%= f.text_area :content, placeholder: "お問い合わせ内容を入力してください" %>
-  </div>
-  <div class="form__label">
-    <%= f.submit "送信" %>
-  </div>
+  <table class="table">
+    <tr>
+      <th class="table__heading"> <%= f.label :お名前 %></th>
+      <td class="table__form"><%= f.text_field :name, placeholder: "ユーザー名", class: "table__form--field" %></td>
+    </tr>
+    <tr>
+      <th class="table__heading"><%= f.label :お問い合わせ内容 %></th>
+      <td class="table__form"><%= f.text_area :content, placeholder: "お問い合わせ内容を入力してください", class: "table__form--area" %></td>
+    </tr>
+  </table>
   
+  <div class="btn post">
+    <%= f.submit "送信", class: "btn__big--blue" %>
+  </div>
 <% end %>
