[Update]ヘッダーのレスポンシブ対応

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,13 +13,14 @@
  *= require_tree .
  *= require_self
  */
+// リセットCSS
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
-  background-color: #EEEEEE;
   width: 100%;
 }
 
@@ -31,4 +32,15 @@ body {
 }
 .alert {
   color: red;
+}
+
+@media (max-width: 768px){
+  .pc {
+    display: none;
+  }
+}
+@media (min-width: 769px){
+  .tablet {
+    display: none;
+  }
 }
