[Update]レイアウトの修正

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -13,10 +13,10 @@
     text-align: end;
     text-decoration: none;
     color: #777777;
+    font-size: small;
   }
   &__icon {
     color: #777777;
-    font-size: 1.5em;
   }
   
 }
