--- a/app/views/public/spots/_index.html.erb
+++ b/app/views/public/spots/_index.html.erb
@@ -1,7 +1,7 @@
-<div class="index">
+<div class="index-address">
   <% spots.each do |spot| %>
-
-    <div class="index__item">
+    <div class="index-address__item">
+      
       <div class="image">
         <ul class="image__box">
           <% spot.spot_images.each do |image| %>
@@ -14,16 +14,16 @@
         </ul>
       </div>
 
-      <div class="index__content">
-        <span class="index__text">
+      <div class="index-address__content">
+        <span class="index-address__text">
           <%= spot.address.truncate(20, omission: '…') %>
         </span>
         <span class="favorite" id="favorite-btn-<%= spot.id %>">
           <%= render "public/favorites/favorite", spot: spot %>
         </span>
       </div>
+      
     </div>
-
   <% end %>
 </div>
 
