--- a/app/views/public/spots/show.html.erb
+++ b/app/views/public/spots/show.html.erb
@@ -7,34 +7,37 @@
         </li>
       <% end %>
     </ul>
+    <div class="show__favorite" id="favorite-btn-<%= @spot.id %>">
+    <%= render "public/favorites/favorite", spot: @spot %>
+  </div>
   </div>
 
-  <div class="profile">
-    <div>
+  <div class="show__content">
+    <div class="profile">
       <%= link_to end_user_path(@spot.end_user) do %>
         <%= image_tag @spot.end_user.get_profile_image, class: "profile__image", size: "100x100" %>
-        <span><%= @spot.end_user.name %></span>
+        <span class="profile__name"><%= @spot.end_user.name %></span>
       <% end %>
-      <span>
+      <span class="btn show__btn">
         <% if @spot.end_user == current_end_user %>
-          <%= link_to "投稿を編集する", edit_spot_path(@spot) %>
+          <%= link_to "投稿を編集する", edit_spot_path(@spot), class: "btn__simple--blue" %>
         <% end %>
       </span>
     </div>
 
-    <div class="profile__item">
-      <%= @spot.introduction %>
+    <div class="show__item">
+      <%=safe_join(@spot.introduction.split("\n"),tag(:br))%>
     </div>
 
-    <div class="profile__item">
+    <div class="show__item">
      住所：<%= @spot.address %>
     </div>
 
-    <div class="profile__item">
+    <div class="show__item">
       投稿日時：<%= l @spot.created_at %>
     </div>
 
-    <div class="profile__item">
+    <div class="show__item">
       <% @spot.tags.each do |tag| %>
         <%= link_to tag_path(tag) do %>
           <%= tag.name %>
@@ -43,10 +46,6 @@
     </div>
 
   </div>
-</div>
-
-<div class="show__favorite" id="favorite-btn-<%= @spot.id %>">
-  <%= render "public/favorites/favorite", spot: @spot %>
 </div>
 
 <div class="show__comment">
@@ -58,11 +57,12 @@
     </div>
     <%= render "public/comments/form", spot: @spot, comment: @comment %>
   <% end %>
-  
+
   <table>
     <tbody id="comment-index-<%= @spot.id %>">
-      <%= render "public/comments/index", spot: @spot %>
+      <%= render "public/comments/index", spot: @spot, comments: @comments %>
+      
     </tbody>
   </table>
-
+  
 </div>
