--- a/app/assets/stylesheets/index-address.scss
+++ b/app/assets/stylesheets/index-address.scss
@@ -1,4 +1,4 @@
-.index {
+.index-address {
   width: 100%;
   max-width: 1400px;
   margin: 0 auto;
@@ -10,11 +10,15 @@
     max-width: 350px;
     padding: 3px;
   }
+
+  &__content {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 
-// レスポンシブ対応
 @media (max-width: 710px){
-.index-address {
-  display: block;
+  .index-address {
+    display: block;
   }
 }
