--- a/app/views/public/comments/destroy.js.erb
+++ b/app/views/public/comments/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#comment-index-<%= @spot.id %>").html("<%= j(render 'index', spot: @spot) %>");
+$("#comment-index-<%= @spot.id %>").html("<%= j(render 'index', spot: @spot, comments: @comments) %>");
