--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -49,9 +49,15 @@
   &__icon {
     font-size: 1.5em;
     color: #777777;
+    position: relative;
   }
   &__icon:hover {
     color: #474747;
+  }
+  &__action{
+    color: #FFFF66;
+    position: absolute;
+    top: 1.5em;
   }
 }
 
