--- a/app/assets/stylesheets/table.scss
+++ b/app/assets/stylesheets/table.scss
@@ -26,6 +26,10 @@
     width: 65%;
     text-align: center;
   }
+  &__comment {
+    width: 70%;
+    margin: 0 auto;
+  }
   &__form {
     width: 60%;
     padding: 5px;
