--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
     <% end %>
   </div>
   
-  <!--レスポンシブ対応（pc）-->
+  <!--pc-->
   <div class="pc">
     <nav>
       <ul class="header__link">
@@ -41,8 +41,12 @@
             <% end %>
           </li>
           <li class="header__link--item">
-            <!--通知のリンクつける-->
-            <i class="fa-solid fa-bell header__icon"></i>
+            <%= link_to notifications_path do %>
+              <i class="fa-solid fa-bell header__icon"></i>
+            <% end %>
+            <% if unchecked_notification.any? %>
+              <i class="fa-solid fa-circle header__action"></i>
+            <% end %>
           </li>
           <li class="header__link--item">
             <%= link_to destroy_end_user_session_path, method: :delete do %>
@@ -51,7 +55,7 @@
           </li>
   
         <!--管理者ログイン後-->
-        <% else admin_signed_in? %>
+        <% elsif admin_signed_in? %>
           <li class="header__link--item">
             <%= link_to destroy_admin_session_path, method: :delete do %>
               <i class="fa-solid fa-right-from-bracket header__icon"></i>
