--- a/app/views/public/relationships/_follow_btn.html.erb
+++ b/app/views/public/relationships/_follow_btn.html.erb
@@ -1,7 +1,9 @@
-<% if end_user != current_end_user %>
-  <% if current_end_user.following?(end_user) %>
-    <%= link_to "unfollow", end_user_relationships_path(end_user), method: :delete, remote: true %>
-  <% else %>
-    <%= link_to "follow", end_user_relationships_path(end_user), method: :post, remote: true %>
+<div class="btn">
+  <% if end_user != current_end_user %>
+    <% if current_end_user.following?(end_user) %>
+      <%= link_to "unfollow", end_user_relationships_path(end_user), method: :delete, class: "btn__simple--red", remote: true %>
+    <% else %>
+      <%= link_to "follow", end_user_relationships_path(end_user), method: :post, class: "btn__simple--blue", remote: true %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
