--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -90,9 +90,13 @@
               <i class="fa-solid fa-circle-plus"></i>新規投稿
             <% end %>
           </li>
-          <li>
-            <!--通知のリンクつける-->
-            <i class="fa-solid fa-bell"></i>通知
+          <li class="header__link--item">
+            <%= link_to notifications_path do %>
+              <i class="fa-solid fa-bell header__icon"></i>
+            <% end %>
+            <% if unchecked_notification.any? %>
+              <i class="fa-solid fa-circle header__action"></i>
+            <% end %>
           </li>
           <li>
             <%= link_to destroy_end_user_session_path, method: :delete do %>
