--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,4 +1,4 @@
-<h2 class="heading">Serch for"<%= @content %>"</h2>
+<h2 class="heading">Serch for<%= @content %></h2>
 <% if @records.present? %>
   <%= render "public/spots/index", spots: @records %>
   <div class="paginate">
