--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 600px;
     // 仮画像
-    background-image: url(main_visual.jpg);
+    background-image: image-url("main_visual.jpg");
     background-position: center;
     background-size: cover;
     text-align: center;
